{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 102,
  "lineage": "0c217ca4-2140-4eb3-f65f-025470b186b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0189c192384d771b1",
            "arn": "arn:aws:ec2:us-east-1:654654623835:elastic-ip/eipalloc-0189c192384d771b1",
            "association_id": "eipassoc-0d652ca93636df49a",
            "domain": "vpc",
            "id": "eipalloc-0189c192384d771b1",
            "instance": "i-0fc6e01cbd412e27e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d777addbf48e9845",
            "private_dns": "ip-172-31-95-37.ec2.internal",
            "private_ip": "172.31.95.37",
            "public_dns": "ec2-54-152-237-230.compute-1.amazonaws.com",
            "public_ip": "54.152.237.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:654654623835:instance/i-0dfcc939a394fd432",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfcc939a394fd432",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terrraa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0462f020a1da921c6",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.184",
            "public_ip": "54.210.72.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5538830ea96d424",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0892334156dd1f4c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d3949fff54c3c0d",
            "tags": {
              "Name": "Ubuntu-server"
            },
            "tags_all": {
              "Name": "Ubuntu-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0892334156dd1f4c2"
            ]
          },
          "dependencies": [
            "aws_security_group.kalki_sg",
            "aws_subnet.bujji",
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-kalki",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:654654623835:instance/i-0fc6e01cbd412e27e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc6e01cbd412e27e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d777addbf48e9845",
            "private_dns": "ip-172-31-95-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.37",
            "public_dns": "ec2-54-152-237-230.compute-1.amazonaws.com",
            "public_ip": "54.152.237.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-073a24d66ea5cdf1b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048ec4406c3ad618d",
            "tags": {
              "Name": "Hello"
            },
            "tags_all": {
              "Name": "Hello"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02621032f2a5b905d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway-kalki",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654623835:internet-gateway/igw-0401cc604f4271255",
            "id": "igw-0401cc604f4271255",
            "owner_id": "654654623835",
            "tags": {
              "Name": "gate-kalki"
            },
            "tags_all": {
              "Name": "gate-kalki"
            },
            "vpc_id": "vpc-08887758d7999d477"
          },
          "dependencies": [
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "K-2898-bujji",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654623835:network-interface/eni-05f0f775fc17cd877",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f54d3f7384adacb8",
                "device_index": 1,
                "instance": "i-0dfcc939a394fd432"
              }
            ],
            "id": "eni-05f0f775fc17cd877",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:90:77:72:f9:a1",
            "owner_id": "654654623835",
            "private_ip": "10.0.1.24",
            "private_ip_list": [
              "10.0.1.24"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.24"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0892334156dd1f4c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d3949fff54c3c0d"
          },
          "dependencies": [
            "aws_instance.ubuntu",
            "aws_security_group.kalki_sg",
            "aws_subnet.bujji",
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654623835:route-table/rtb-0ac4930d5f8b784fa",
            "id": "rtb-0ac4930d5f8b784fa",
            "owner_id": "654654623835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0401cc604f4271255",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT"
            },
            "tags_all": {
              "Name": "RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08887758d7999d477"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway-kalki",
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b53abf811b1dc90",
            "route_table_id": "rtb-0ac4930d5f8b784fa",
            "subnet_id": "subnet-04d3949fff54c3c0d"
          },
          "dependencies": [
            "aws_internet_gateway.gateway-kalki",
            "aws_route_table.RT",
            "aws_subnet.bujji",
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kalki_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654623835:security-group/sg-0892334156dd1f4c2",
            "description": "Allow HTTP and HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0892334156dd1f4c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "654654623835",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08887758d7999d477"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bujji",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654623835:subnet/subnet-04d3949fff54c3c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3949fff54c3c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654623835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bujji-kalki"
            },
            "tags_all": {
              "Name": "bujji-kalki"
            },
            "vpc_id": "vpc-08887758d7999d477"
          },
          "dependencies": [
            "aws_vpc.kalki-2898"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kalki-2898",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654623835:vpc/vpc-08887758d7999d477",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f80d08d3ed75fcd",
            "default_route_table_id": "rtb-0f5d511dfc23e7c24",
            "default_security_group_id": "sg-052a68707486e408f",
            "dhcp_options_id": "dopt-02b2b2ae2252a25ad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08887758d7999d477",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5d511dfc23e7c24",
            "owner_id": "654654623835",
            "tags": {
              "Name": "kalki"
            },
            "tags_all": {
              "Name": "kalki"
            }
          }
        }
      ]
    }
  ]
}